--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
  <head>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
    <meta charset="UTF-8">
-   <title>JavaScriptの練習サイト</title>
+   <title>個人開発テスト</title>
  </head>
+
 <body>
   <script src="script.js"></script>
  <header>
@@ -18,7 +20,7 @@
          現在のリスト；
          <span id="current-list">選択されていません</span>
        </li>
-       <li class="background-red" id="lists">
+       <li class="background-red" id="lists">リスト
        </li>
        <li>カリキュラム変更</li>
      </ul>
