--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
        <li class="pull-down-list">リスト3</li>
        <li class="pull-down-list">リスト4</li>
      </ul>
+     <ul class="show-lists hidden">
+       <li>リスト1</li>
+       <li>リスト2</li> 
+       <li>リスト3</li>
+       <li>リスト4</li>
+      </ul>
    </div
  </header>
 </body>
